# SimpleCrawler-MK4

./: .gitignore  CHANGELOG.md  CODE_EXTRACTION_SUCCESS.md  CONTRIBUTING.md  DEVELOPMENT_PHASES.md  HUMAN_READABLE_SUCCESS.md  LICENSE  MICROSERVICES_COMPLETE.md  MICROSERVICES_SUCCESS.md  Makefile  README.md  ROADMAP.md  VALIDATION_REPORT.md  context.md  docker-compose.yml  nginx.conf  test_code_extraction.py  test_readable_formats.py  test_real_sites.py  validate_code_extraction.py
app/: __init__.py  main.py  requirements.txt
app/tests/: conftest.py  test_cli.py  test_crawler.py  test_integration.py
clients/: README.md
clients/cpp/: CMakeLists.txt
clients/python/: setup.py
clients/python/src/simplecrawler_client/: __init__.py  exceptions.py
code_extraction_test/: requests.readthedocs.io_en_latest_user_quickstart.md
docs/: CHANGELOG.md  DEPLOYMENT.md  READABLE_FORMATS.md
examples/: basic_usage.py  readable_demo.py
examples/agent_integrations/: research_agent.py
examples/llm_use_cases/: training_data_generator.py
examples/output/basic/: example.com_index.md
examples/output/comprehensive/: crawl_results.json
examples/output/docs/: crawl_results.json
examples/output/shallow/: fastapi.tiangolo.com_advanced_async-tests.md  fastapi.tiangolo.com_deployment_manually.md  fastapi.tiangolo.com_index.md  fastapi.tiangolo.com_reference_testclient.md  fastapi.tiangolo.com_resources.md
infra/: docker-compose.dev.yml
scripts/: quick_test.sh
services/api/: Dockerfile  main.py  requirements.txt
services/worker/: Dockerfile  requirements.txt  worker.py
